# freesound-crossmodal-search

./: .gitignore  README.md  main.py  pyproject.toml
config/data/: clotho.yaml
config/model/: default.yaml
config/trainer/: default.yaml
crossmodal_alignment/: retrieval_model.py
crossmodal_alignment/datasets/: __init__.py  clotho.py
crossmodal_alignment/modules/: encoder.py  text.py
retrieval_interface/: streamlit_app.py
scripts/: extract_passt_embeddings.py
